Fix the button text color problem

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
       <div class="bottom-half">
         <div class="box">
           <img src="img/camera.png" class="icons">
-          <p class="box-header">BEAUTIFUL COVER IMAGE</p>
-          <p>Upload your own cover image to make your registry more personal. Pick your favorite shot from the engagement shoot or choose a lovely vacation photo.</p>
+          <p class="box-header">COMELY ETCHINGS</p>
+          <p>Present custom etchings for a personal touch. Select your favoured lithographs from the engagement session or choose a lovely vacation intaglio.</p>
         </div>
         <div class="box">
           <img src="img/gift.png" class="icons">
-          <p class="box-header">ADD GIFTS FROM ANYWHERE</p>
-          <p>Our simple bookmarklet lets you add items from any online store. You won't be locked into a single retailer, and you won't need to manage multiple registries.</p>
+          <p class="box-header">SUMMATE OBLATIONS FROM ANYPLACE</p>
+          <p>Our simple bookmarklet enables you to add items from any on-line shoppe. You shall not be locked into a single retailer, and you need not manage multiple registries all at once.</p>
         </div>
         <div class="box">
           <img src="img/folder.png" class="icons">
-          <p class="box-header">CATEGORIES FOR YOUR LIFESTYLE</p>
-          <p>Go beyond traditional gifts. Our categories will get you thinking about how you to like Play, what makes Journeys together special, and the things you find Delicious.</p>
+          <p class="box-header">CATEGORIES FOR YOUR CONDUCT</p>
+          <p>Go beyond traditional endowments. Our categories will get you thinking about how you to like Play, what makes Journeys together picturesque, and the things you find Pleasing.</p>
         </div>
       </div> <!--bottom-half-->
 
