Tweak font sizing, styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="main-title">
-          <div class="title"><span class="divider">WEDDING GIFTS YOU'LL LOVE FROM THE</span></div>
+          <div class="title">Wedding Gifts You'll Love From The</div>
 
           <div class="header-text">PEOPLE YOU LOVE</div>
           <div class="button"><a href="#">Start your free trial</a></div>
